--- a/src/main/webapp/portfolio/css/layouts/side-menu.css
+++ b/src/main/webapp/portfolio/css/layouts/side-menu.css
@@ -87,7 +87,7 @@ appears on the left side of the page.
     left: 0;
     bottom: 0;
     z-index: 1000; /* so the menu or its navicon stays above all content */
-    background: #191818;
+    background: #032625;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
@@ -129,7 +129,7 @@ appears on the left side of the page.
     */
     #menu .pure-menu-selected,
     #menu .pure-menu-heading {
-        background: #1f8dd6;
+        background: #0e7b79;
     }
         /*
         This styles a link within a selected menu item `<li>`.
@@ -142,7 +142,9 @@ appears on the left side of the page.
     This styles the menu heading.
     */
     #menu .pure-menu-heading {
-        font-size: 110%;
+        font-size: 120%;
+        text-align:left;
+        text-transform: capitalize;
         color: #fff;
         margin: 0;
     }
