--- a/src/main/webapp/portfolio/css/layouts/side-menu.css
+++ b/src/main/webapp/portfolio/css/layouts/side-menu.css
@@ -144,6 +144,7 @@ appears on the left side of the page.
     */
     #menu .pure-menu-heading {
         font-size: 110%;
+        text-transform: capitalize;
         color: #fff;
         margin: 0;
     }
